updated event listener and title

--- a/jeopardy/index.html
+++ b/jeopardy/index.html
@@ -2,32 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jeopardy</title>
-  <link href="https://fonts.googleapis.com/css?family=Copse&display=swap"
-        rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-        rel="stylesheet">
+  <title>Quiz Show!</title>
+  <link href="https://fonts.googleapis.com/css?family=Copse&display=swap" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="jeopardy.css">
 </head>
+
 <body>
-<div class="">
-      <h1 id="title" class="display-3">Jeopardy!</h1>
-</div>
-<button type="button" class="btn btn-secondary btn-block">Start!</button>
-<div class="fa-3x" style="display: none;">
-      <i class="fas fa-spinner fa-spin fa-4x" ></i>
-</div>
+  <div class="">
+    <h1 id="title" class="display-3">Quiz Show!</h1>
+  </div>
+  <button type="button" class="btn btn-secondary btn-block">Start!</button>
 
-<div id="jeopardyBoard"></div>
+  <div class="fa-3x" style="display: none;">
+    <i class="fas fa-spinner fa-spin fa-4x" ></i>
+  </div>
 
-
-<script src="https://unpkg.com/jquery"></script>
-<script src="https://unpkg.com/axios/dist/axios.js"></script>
-<script src="https://unpkg.com/lodash"></script>
-<script src="jeopardy.js"></script>
-
+  <div id="jeopardyBoard"></div>
+  <script src="https://unpkg.com/jquery"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="https://unpkg.com/lodash"></script>
+  <script src="jeopardy.js"></script>
 </body>
 </html>
